--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,20 @@
 .pageContent p {
   text-align: justify;
 }
+.iconLink {
+  cursor: pointer;
+  opacity: 0.8;
+  transition: opacity 0.1s ease;
+}
+.iconLink:hover {
+  opacity: 1;
+}
+.iconCircular {
+  border-radius: 500em;
+  box-shadow: inset 0 0 0 0.1em rgba(0, 0, 0, 0.1);
+  height: 2em;
+  line-height: 1;
+  padding: 0.5em 0;
+  width: 2em;
+  margin: 0 0.25rem 0 0;
+}
