--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,3 +31,11 @@
   width: 2em;
   margin: 0 0.25rem 0 0;
 }
+
+blockquote {
+  border-left: 4px solid #007fff;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 0em 2em;
+  margin: 1em 0em 2em;
+}
